[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/temp_bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/fire5.png" type="Texture" id=3]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform sampler2D noise;

void fragment(){
	vec4 base=texture(TEXTURE,UV);
	vec4 n= texture(noise,vec2(UV.x,UV.y+TIME));//TIME part to read form higher value over time?
	base.r += 0.4f - distance(vec2(0.5,UV.y),UV);//want to make center brighter so add small amount and subtract from center
	base.r = (base.r*0.3) +(n.r *0.4); //adding noise can experiment with ratios
	COLOR=vec4(float(base.r>0.4),float(base.r>0.5),float(base.r>0.6),float(base.r>0.4));
	
	//base.r is red channel
}
"

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 1 )
shader_param/noise = SubResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 7.0
margin_top = 6.0
margin_right = 784.0
margin_bottom = 557.0
rect_scale = Vector2( 1.31642, 1.08664 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = -220.0
margin_right = 86.0
margin_bottom = -104.0
rect_scale = Vector2( 1.77124, 1.77124 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -644, -266 )
focus_neighbour_top = NodePath("../Quit")
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Options"

[node name="Market" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -644, -266 )
text = "Market"

[node name="Tests" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 63.0
margin_bottom = 92.0
text = "Tests"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 63.0
margin_bottom = 116.0
focus_neighbour_bottom = NodePath("../Start")
text = "Quit"

[node name="Fire5" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 643, 396 )
scale = Vector2( 0.40332, 0.37793 )
texture = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Market" to="." method="_on_Market_pressed"]
[connection signal="pressed" from="VBoxContainer/Tests" to="." method="_on_Tests_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
